UI polish: remove Meeting label, dot on now-line, line hides on box overlap, dark boxes, no drag scale

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChronoSync | Interactive Timezone Meeting Planner</title>
+    <title>Timezone Converter | Interactive Timezone Meeting Planner</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,8 +16,7 @@
 
 <body>
     <header>
-        <h1>ChronoSync</h1>
-        <p>Plan your global meetings with surgical precision.</p>
+        <h1>Timezone Converter</h1>
     </header>
 
     <main class="app-container">
@@ -30,6 +29,10 @@
             <div class="control-group">
                 <label for="target-tz">Their Timezone</label>
                 <select id="target-tz"></select>
+            </div>
+            <div class="control-group">
+                <label>&nbsp;</label>
+                <button id="add-timezone" class="btn-add-tz" title="Add timezone">＋</button>
             </div>
             <div class="control-group">
                 <label for="meeting-duration">Duration</label>
@@ -71,8 +74,10 @@
                 </div>
                 <div class="time-indicator" id="source-now-line"></div>
                 <div class="appointment-card" id="main-appointment">
-                    <div class="title">Meeting</div>
                     <div class="time-range" id="source-range">10:00 - 11:00</div>
+                </div>
+                <div class="appointment-card" id="main-appointment-wrap" style="display: none;">
+                    <div class="time-range" id="source-range-wrap"></div>
                 </div>
             </div>
 
